chore: update staging (#295)
* chore(main): release 1.2.0 (#216)

Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>

* feat: about section on subdomain loads (#263)

Without this people see  confusing button to click, and some
configuration, but have no idea what is happening.

Co-authored-by: Russell Dempsey <1173416+SgtPooki@users.noreply.github.com>

* fix: remove fonts except woff2 (#282)

* fix: add purgecss webpack plugin

* fix: keep only woff2 font, remove purgeCss

* chore: improve LCP performance (#293)

---------

Co-authored-by: Marcin Rataj <lidel@lidel.org>
Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>
Co-authored-by: Daniel Norman <1992255+2color@users.noreply.github.com>

--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,6 @@
     <meta name="robots" content="noindex" />
   </head>
   <body>
-    <div id="root" class="montserrat f5"></div>
+    <div id="root" class="sans-serif f5"></div>
   </body>
 </html>
